# mlrt

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: 04.02.TLP.2.2.0_TrainOS.ff  04.02.TLP.2.2.0_TrainOS.mlrt  04.02.TLP.2.2.1_TrainOS.mlrt  04.02.TLP.2.2.2_TrainOS.mlrt  04.02.TLP.2.2.4_TrainOS.ff  04.02.TLP.2.2.4_TrainOS.mlrt  04.02.TLP.2.2.5_TrainOS.mlrt  04.02.TLP.2.2.8_TrainOS.ff  04.02.TLP.2.2.9_TrainOS.ff  04.02.TLP.4.2.0_TrainOS.ff  04.02.TLP.4.2.1_TrainOS.mlrt  04.02.TLP.4.2.3_TrainOS.ff  04.02.TLP.4.2.4_TrainOS.ff  04.02.TLP.4.2.4_TrainOS.mlrt  04.02.TLP.4.2.5_TrainOS.mlrt  04.02.TLP.4.2.6_TrainOS.ff  04.02.TLP.4.2.8_TrainOS.ff  04.02.TLP.4.2.8_TrainOS.mlrt  04.02.TLP.6.3.0_TrainOS.ff  04.02.TLP.6.3.0_TrainOS.mlrt  04.02.TLP.6.3.1_TrainOS.ff  04.02.TLP.6.3.1_TrainOS.mlrt  04.02.TLP.6.3.2_TrainOS.ff  04.02.TLP.6.3.2_TrainOS.mlrt  04.02.TLP.6.3.3_TrainOS.ff  04.02.TLP.6.3.5_TrainOS.mlrt  04.02.TLP.6.3.8_TrainOS.ff  04.02.TLP.6.3.8_TrainOS.mlrt  04.02.TLP.6.3.9_TrainOS.ff  04.02.TLP.6.3.9_TrainOS.mlrt  04.02.TLT.2.1.1_TrainOS.mlrt  04.02.TLT.2.1.2_TrainOS.ff  04.02.TLT.2.1.3_TrainOS.mlrt  04.02.TLT.2.1.5_TrainOS.ff  04.02.TLT.2.1.5_TrainOS.mlrt  04.02.TLT.2.1.7_TrainOS.mlrt  04.02.TLT.2.1.8_TrainOS.ff  04.02.TLT.4.1.0_TrainOS.ff  04.02.TLT.4.1.0_TrainOS.mlrt  04.02.TLT.4.1.1_TrainOS.ff  (+3934 more)
data/OnlyShort/: 04.02.TLP.2.2.1_TrainOS.ff  04.02.TLP.2.2.2_TrainOS.ff  04.02.TLP.2.2.3_TrainOS.ff  04.02.TLP.2.2.3_TrainOS.mlrt  04.02.TLP.2.2.5_TrainOS.ff  04.02.TLP.2.2.6_TrainOS.ff  04.02.TLP.2.2.6_TrainOS.mlrt  04.02.TLP.2.2.7_TrainOS.ff  04.02.TLP.2.2.7_TrainOS.mlrt  (+2144 more)
(+4 files in other folders)
