[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Adil Soubki <adil.soubki@stonybrook.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
pre-commit = "^2.20.0"
mypy = "^0.991"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
